--- a/src/loadify/Localization/Main.resx
+++ b/src/loadify/Localization/Main.resx
@@ -157,6 +157,15 @@ Do you want to remove them from your download contract?</value>
   <data name="ExistingTracksRemovalDialogTitle" xml:space="preserve">
     <value>Detected existing Tracks</value>
   </data>
+  <data name="FirstUsageDetection" xml:space="preserve">
+    <value>It seems that you are using Loadify for the first time.</value>
+  </data>
+  <data name="RefreshPlaylistDialogMessage" xml:space="preserve">
+    <value>Do you want to refresh/load your playlist metadata?</value>
+  </data>
+  <data name="RefreshPlaylistsDialogTitle" xml:space="preserve">
+    <value>Refreshing Playlists</value>
+  </data>
   <data name="RemovePlaylistConfirmationDialogMessage" xml:space="preserve">
     <value>Do you want to permanently remove this playlist from your account?</value>
   </data>
