--- a/src/loadify/Localization/Main.de.resx
+++ b/src/loadify/Localization/Main.de.resx
@@ -150,6 +150,12 @@
   <data name="DownloadPausedDialogTitle" xml:space="preserve">
     <value>Download pausiert</value>
   </data>
+  <data name="EnableFetchPlaylistsOnStartupDialogMessage" xml:space="preserve">
+    <value>Es gibt eine Einstellung die dafür sorgt, dass die Playlists bei jedem Start aktualisiert werden. Möchtest du, dass ich das für dich aktiviere? Übrigens kannst du die Einstellung jederzeit manuell ändern.</value>
+  </data>
+  <data name="EnableFetchPlaylistsOnStartupDialogTitle" xml:space="preserve">
+    <value>Playlists automatisch beim Start aktualisieren</value>
+  </data>
   <data name="ExistingTracksRemovalDialogMessage" xml:space="preserve">
     <value>Loadify hat festgestellt dass sich {0} der ausgewählten Tracks in deinem Download Verzeichnis befinden.
 Möchtest du diese Tracks abwählen?</value>
@@ -157,11 +163,8 @@ Möchtest du diese Tracks abwählen?</value>
   <data name="ExistingTracksRemovalDialogTitle" xml:space="preserve">
     <value>Existierende Tracks erkannt</value>
   </data>
-  <data name="FirstUsageDetection" xml:space="preserve">
-    <value>Es sieht so aus, als ob du Loadify zum ersten Mal benutzt.</value>
-  </data>
   <data name="RefreshPlaylistDialogMessage" xml:space="preserve">
-    <value>Möchtest du jetzt die Playlistinformationen aktualisieren/laden?</value>
+    <value>Es sieht so aus, als ob du Loadify zum ersten Mal benutzt. Möchtest du jetzt die Playlistinformationen aktualisieren/laden?</value>
   </data>
   <data name="RefreshPlaylistsDialogTitle" xml:space="preserve">
     <value>Playlists aktualisieren</value>
